--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "react",
     "avatar"
   ],
+  "scripts": {
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "node_modules/.bin/webpack --config webpack.prod.js --mode production"
+  },
   "repository": "git@github.com:fangpenlin/avataaars.git",
   "author": "Fang-Pen Lin <hello@fangpenlin.com>",
   "license": "MIT",
@@ -15,16 +19,37 @@
     "react": "^16.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.0.25",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@types/react": "^16.9.25",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^4.5.0",
     "import-sort-style-renke": "^4.2.0",
+    "style-loader": "^2.0.0",
     "tslint": "^5.8.0",
     "tslint-config-standard": "^7.0.0",
     "tslint-react": "^3.2.0",
-    "typescript": "^2.6.2"
+    "typescript": "^2.6.2",
+    "webpack": "^5.0.0-rc.3",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/react-dom": "^17.0.0",
     "lodash": ">=4.17.11",
-    "prop-types": "^15.6.0"
+    "prop-types": "^15.6.0",
+    "react": "^16.13.1",
+    "react-dom": "^17.0.1",
+    "react-hot-loader": "^4.13.0",
+    "source-map-loader": "^1.1.3",
+    "ts-loader": "^8.0.12",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "importSort": {
     ".js, .jsx, .es6, .es": {
