--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,13 @@
     "noImplicitReturns": true,
     "declaration": true,
     "outDir": "./dist",
-    "lib": ["es6", "dom"]
+    "lib": ["es6", "dom"],
+    "typeRoots": [
+      "../node_modules/@types"
+    ]
   },
-  "types": ["jest", "node"]
+  "types": ["jest", "node"],
+  "exclude": [
+      "node_modules"
+    ]
 }
