--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    // "noUnusedLocals": true,
+    // "noUnusedParameters": true,
     "noImplicitReturns": true,
     "declaration": true,
     "outDir": "./dist",
