--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@types/react": "^17.0.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "eslint": "^7.16.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^4.5.0",
     "import-sort-style-renke": "^4.2.0",
@@ -32,6 +36,7 @@
     "tslint-config-standard": "^7.0.0",
     "tslint-react": "^3.2.0",
     "typescript": "^4.1.3",
+    "typescript-eslint": "^0.0.1-alpha.0",
     "webpack": "^5.0.0-rc.3",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
